--- a/contato.html
+++ b/contato.html
@@ -12,7 +12,7 @@
 
   	<div id="principal">
 
-   <img src="imagens/capa.png">
+   <img src="interview2.jpg">
 
    </div>
 
@@ -33,7 +33,7 @@
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquam lacus non pretium pharetra. Maecenas aliquam nulla rutrum fringilla sodales. Duis condimentum sollicitudin augue, sit amet ornare eros pretium sit amet. Fusce lacinia aliquet est at dictum. Morbi pharetra, arcu eu convallis congue, odio dolor consequat arcu, vitae ornare nisl lacus non libero.
 	</p>
 
-	<img class="img-campanha"src="imagens/foto1.png">
+	<img class="img-campanha"src="interview2.jpg">
 
 	<div>
 	<strong>e-mail: </strong>
