--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
   	<div id="principal">
 
-   <img src="interview2.jpg">
+   <img src="interview2.jpg" width: 900px;
+	padding-top: 18px;>
+
 
    </div>
 
