--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
   	<div id="principal">
 
-   <img src="interview2.jpg" width: 900px;
-	padding-top: 18px;>
+   <img src="interview2.jpg">
 
 
    </div>
